improve index handler